backend[wip]: refactoring
