# backend/internal/detection/rest/router/router.go
@@ -3,21 +3,17 @@ package router
 import (
 	"context"
 
-	"github.com/EgorTarasov/true-tech/backend/internal/config"
-	"github.com/EgorTarasov/true-tech/backend/internal/detection/rest/handler"
-	"github.com/EgorTarasov/true-tech/backend/internal/detection/service"
-	pb "github.com/EgorTarasov/true-tech/backend/internal/gen"
-	"github.com/EgorTarasov/true-tech/backend/pkg/db"
+	"github.com/EgorTarasov/true-tech/backend/internal/auth/rest/middleware"
 	"github.com/gofiber/fiber/v2"
-	"go.opentelemetry.io/otel/trace"
 )
 
-// TODO: вынести client
-func InitDetectionRouter(ctx context.Context, app *fiber.App, cfg *config.Config, _ *db.Database, speechServiceClient pb.SpeechServiceClient, tracer trace.Tracer) error {
-	s := service.New(ctx, speechServiceClient)
-	controller := handler.NewDetectHandler(ctx, s, tracer)
+type mlHandler interface {
+	ExecuteCommand(c *fiber.Ctx) error
+}
 
-	detection := app.Group("/detect")
-	detection.Post("/test", controller.Test)
+// func InitDetectionRouter(ctx context.Context, app *fiber.App, cfg *config.Config, pg *db.Database, speechServiceClient pb.DomainDetectionServiceClient, tracer trace.Tracer) error {
+func InitDetectionRouter(_ context.Context, app *fiber.App, controller mlHandler) error {
+	detection := app.Group("/detection")
+	detection.Post("/execute", middleware.UserClaimsMiddleware, controller.ExecuteCommand)
 	return nil
 }
